# distributed-api-server

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  test.txt
.github/workflows/: rust.yml
async-server/: Cargo.toml
async-server/src/: main.rs  tcp_server_async.rs
base/: Cargo.toml
base/src/: controller.rs  error.rs  lib.rs  routes.rs  utils.rs
cluster/: Cargo.toml  README.md  TODO.md
cluster/src/: .gateway.rs.swp  .service.rs.swp  .service_registry.rs.swp  async_node.rs  cli.rs  discovery.rs  gateway.rs  health.rs  lib.rs  node.rs  service.rs  service_registry.rs  sync_node.rs
server/: Cargo.toml  Dockerfile  Makefile
server/res/: 404.html  index.html
server/src/: .http_handler.rs.swp  .http_handler.rs.un~  .main.rs.swp  .main.rs.un~  .test.rs.swp  .test.rs.un~  .test.un~  controller.rs  error.rs  http_builder.rs  http_handler.rs  http_handler.rs~  http_header.rs  main.rs  main_async.rs  routes.rs  tcp_server.rs  tcp_server_async.rs  test  test.rs  utils.rs
sync-server/: Cargo.toml  Makefile  TODO.md  \
sync-server/res/: article.html
sync-server/src/: controller.rs  main.rs  tcp_server.rs  (+2 more)
tests/: bulk_failure_tests.rs
wasp-core/: Cargo.toml
wasp-core/src/: lib.rs
wasp-core/src/discovery/: mod.rs  service_discovery.rs  traits.rs
wasp-core/src/discovery/adapter/: consul.rs  mod.rs
wasp-core/src/http/: handler.rs  mod.rs  request.rs  response.rs
wasp-core/src/http/adapter/: actix_web.rs  mod.rs
wasp-core/src/http/client/: .minreq_adapter.rs  mod.rs
wasp-core/tests/: actix_adapter.rs  consul_adapter.rs
(+10 files in other folders)
