[package]
name = "wasp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
bytes = "1.10.1"
httparse = "1.10.1"
actix-web = "4.10.2"
minreq = "2.13.3"
rs-consul = "0.4.0"
